# login-demo

./: .env  config.py  noxfile.py  pyproject.toml
migrations/versions/: 406c9149ef4d_added_user.py  f735022ea6dd_added_password_hash.py
src/login_demo/: __init__.py  forms.py  models.py  routes.py
src/login_demo/static/: style.css
src/login_demo/templates/: admin.html  base.html  index.html  login.html  register.html
