[tool.poetry]
name = "login-demo"
version = "0.1.0"
description = ""
authors = ["Linus Törngren <linus@etnolit.se>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
python-dotenv = "^0.19.2"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.0"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
